--- a/小方法.md
+++ b/小方法.md
@@ -31,3 +31,22 @@ var arr = [1,[2,3,[4]]]
 [].concat.apply([],arr) //[1,2,3,[4]]
 //apply的方法，第二个参数是方法传递的参数按数组的方式传入,后面的意思是，[].concat(1,[2,3,[4]])
 ```
+
+## 关于this.setState
+```js
+// this.setState({
+//     text:elm.text,
+//     icon:elm.icon
+// })
+//他是上述的简写方式
+this.setState(elm)
+```
+## 对象解构赋值
+
+```js
+<!--从obj这个对象中去掉传递pwd-->
+function authSuccess(obj){
+    const {pwd,...data} = obj //注释掉pwd
+    return {type:AUTH_SUCCESS,payload:data}
+}
+```
